# fonterator
#
# Copyright (c) 2018-2020 Jeron Aldaron Lau
# 
# Licensed under the Apache License, Version 2.0, <LICENSE-APACHE or
# https://apache.org/licenses/LICENSE-2.0>, or the Zlib License, <LICENSE-ZLIB
# or http://opensource.org/licenses/Zlib>, at your option. This file may not be
# copied, modified, or distributed except according to those terms.

[package]
name = "fonterator"
version = "0.9.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
license = "Apache-2.0 OR Zlib"

description = "Load fonts as vector graphics in pure Rust with advanced text layout."
repository = "https://github.com/libcala/fonterator"
documentation = "https://docs.rs/fonterator"
homepage = "https://github.com/libcala/fonterator/blob/master/CHANGELOG.md"
include = ["Cargo.toml", "README.md", "LICENSE-ZLIB", "LICENSE-APACHE", "src/*"]
categories = ["gui", "rendering"]
keywords = ["font", "truetype", "opentype", "ttf", "otf"]
readme = "README.md"
edition = "2018"

[dependencies]
kurbo = { git = "https://github.com/GraphiteEditor/kurbo.git" }        # For vector path operations
unicode-script = "0.5" # For calculating text direction.
ttf-parser = "0.12"    # For reading TTF/OTF files
rustybuzz = "0.4"      # For text shaping
lazy_static = "*"

[features]
default = []
docs-rs = []
